// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders select field with list of options 1`] = `
<select
  aria-labelledby="Dropdown1_label Dropdown1_hint"
  className="usa-select maxw-mobile-lg"
  id="Dropdown1"
  name="field-name"
  onChange={[MockFunction]}
>
  <option
    value=""
  >
    Select an answer
  </option>
  <option
    key="a"
    value="a"
  >
    Apple
  </option>
  <option
    key="b"
    value="b"
  >
    Banana
  </option>
</select>
`;

exports[`Dropdown when \`autocomplete\` is true renders the list of options as combo-box 1`] = `
<div
  className="usa-combo-box"
>
  <select
    aria-labelledby="Dropdown20_label Dropdown20_hint"
    className="usa-select maxw-mobile-lg"
    id="Dropdown20"
    name="field-name"
    onChange={[MockFunction]}
  >
    <option
      value=""
    >
      Select an answer
    </option>
    <option
      key="a"
      value="a"
    >
      Apple
    </option>
    <option
      key="b"
      value="b"
    >
      Banana
    </option>
  </select>
</div>
`;
